<resources>
    <string name="app_name">MANAS Hub</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="user_first_name">First name</string>
    <string name="user_email">Email</string>
    <string name="user_info_save_changes">Save changes</string>
    <string name="user_last_name">Last name</string>
    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="title_activity_user_info">Profile</string>
    <string name="logout">Logout</string>
    <string name="logging_out">Logging out…</string>
    <string name="saving">Saving…</string>
</resources>
